--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -48,7 +48,7 @@
                 android:ems="10"
                 android:hint="@string/investment_amount_text"
                 android:importantForAutofill="no"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:minHeight="48dp"
                 tools:ignore="TextContrastCheck" />
 
@@ -62,7 +62,7 @@
                 android:ems="10"
                 android:hint="@string/low_sell_price_text"
                 android:importantForAutofill="no"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:minHeight="48dp"
                 tools:ignore="TextContrastCheck" />
 
@@ -76,7 +76,7 @@
                 android:ems="10"
                 android:hint="@string/high_sell_price_text"
                 android:importantForAutofill="no"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:minHeight="48dp"
                 tools:ignore="TextContrastCheck" />
 
@@ -118,7 +118,7 @@
                 android:ems="10"
                 android:hint="@string/initial_purchase_price_text"
                 android:importantForAutofill="no"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:minHeight="48dp"
                 tools:ignore="TextContrastCheck" />
 
